--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,39 @@
-# local package
--e .
-
-# external requirements
-click
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-
-
-# backwards compatibility
-pathlib2
+arrow==1.2.1
+binaryornot==0.4.4
+brotlipy==0.7.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.0
+click==8.0.3
+cookiecutter==1.7.3
+cryptography==35.0.0
+flake8==4.0.1
+idna==3.1
+importlib-metadata==3.3.0
+Jinja2==2.11.3
+jinja2-time==0.2.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+numpy==1.21.4
+pandas==1.3.4
+pip==21.3.1
+poyo==0.5.0
+pycodestyle==2.8.0
+pycparser==2.21
+pyflakes==2.4.0
+pyOpenSSL==21.0.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-slugify==5.0.2
+pytz==2021.3
+requests==2.26.0
+setuptools==59.2.0
+six==1.16.0
+src==0.1.0
+text-unidecode==1.3
+typing_extensions==4.0.0
+Unidecode==1.3.2
+urllib3==1.26.7
+wheel==0.37.0
+zipp==3.6.0
