--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+appnope==0.1.2
 arrow==1.2.1
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
 binaryornot==0.4.4
 brotlipy==0.7.0
 certifi==2021.10.8
@@ -8,32 +11,52 @@ charset-normalizer==2.0.0
 click==8.0.3
 cookiecutter==1.7.3
 cryptography==35.0.0
+debugpy==1.5.1
+decorator==5.1.0
+entrypoints==0.3
 flake8==4.0.1
 idna==3.1
 importlib-metadata==3.3.0
+ipykernel==6.5.0
+ipython==7.29.0
+jedi==0.18.1
 Jinja2==2.11.3
 jinja2-time==0.2.0
+jupyter-client==7.0.6
+jupyter-core==4.9.1
 MarkupSafe==1.1.1
+matplotlib-inline==0.1.3
 mccabe==0.6.1
+nest-asyncio==1.5.1
 numpy==1.21.4
 pandas==1.3.4
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
 pip==21.3.1
 poyo==0.5.0
+prompt-toolkit==3.0.22
+ptyprocess==0.7.0
 pycodestyle==2.8.0
 pycparser==2.21
 pyflakes==2.4.0
+Pygments==2.10.0
 pyOpenSSL==21.0.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-slugify==5.0.2
 pytz==2021.3
+pyzmq==22.3.0
 requests==2.26.0
 setuptools==59.2.0
 six==1.16.0
 src==0.1.0
 text-unidecode==1.3
+tornado==6.1
+traitlets==5.1.1
 typing_extensions==4.0.0
 Unidecode==1.3.2
 urllib3==1.26.7
+wcwidth==0.2.5
 wheel==0.37.0
 zipp==3.6.0
