--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ charset-normalizer==2.0.0
 click==8.0.3
 cookiecutter==1.7.3
 cryptography==35.0.0
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
 entrypoints==0.3
 flake8==4.0.1
+fonttools==4.28.3
 idna==3.1
 importlib-metadata==3.3.0
 ipykernel==6.5.0
@@ -24,15 +26,22 @@ Jinja2==2.11.3
 jinja2-time==0.2.0
 jupyter-client==7.0.6
 jupyter-core==4.9.1
+kiwisolver==1.3.2
 MarkupSafe==1.1.1
+matplotlib==3.5.0
 matplotlib-inline==0.1.3
 mccabe==0.6.1
+munkres==1.1.4
 nest-asyncio==1.5.1
 numpy==1.21.4
+olefile==0.46
+packaging==21.3
 pandas==1.3.4
 parso==0.8.2
+patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.4.0
 pip==21.3.1
 poyo==0.5.0
 prompt-toolkit==3.0.22
@@ -42,15 +51,19 @@ pycparser==2.21
 pyflakes==2.4.0
 Pygments==2.10.0
 pyOpenSSL==21.0.0
+pyparsing==3.0.6
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-slugify==5.0.2
 pytz==2021.3
 pyzmq==22.3.0
 requests==2.26.0
+scipy==1.7.3
+seaborn==0.11.2
 setuptools==59.2.0
 six==1.16.0
 src==0.1.0
+statsmodels==0.13.1
 text-unidecode==1.3
 tornado==6.1
 traitlets==5.1.1
