--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.0
 click==8.0.3
+colorama==0.4.4
 cookiecutter==1.7.3
 cryptography==35.0.0
 cycler==0.11.0
@@ -66,6 +67,7 @@ src==0.1.0
 statsmodels==0.13.1
 text-unidecode==1.3
 tornado==6.1
+tqdm==4.62.3
 traitlets==5.1.1
 typing_extensions==4.0.0
 Unidecode==1.3.2
