--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ ipython==7.29.0
 jedi==0.18.1
 Jinja2==2.11.3
 jinja2-time==0.2.0
+joblib==1.1.0
 jupyter-client==7.0.6
 jupyter-core==4.9.1
 kiwisolver==1.3.2
@@ -59,6 +60,7 @@ python-slugify==5.0.2
 pytz==2021.3
 pyzmq==22.3.0
 requests==2.26.0
+scikit-learn==1.0.1
 scipy==1.7.3
 seaborn==0.11.2
 setuptools==59.2.0
@@ -66,6 +68,7 @@ six==1.16.0
 src==0.1.0
 statsmodels==0.13.1
 text-unidecode==1.3
+threadpoolctl==3.0.0
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
