--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,46 @@
 appnope==0.1.2
-argon2-cffi==21.1.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 arrow==1.2.1
-async-generator==1.10
-attrs==21.2.0
+attrs==21.4.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 binaryornot==0.4.4
-biopython==1.79
 bleach==4.1.0
 Bottleneck==1.3.2
 brotlipy==0.7.0
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
-charset-normalizer==2.0.0
+charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
 confuse==1.7.0
 cookiecutter==1.7.3
-cryptography==35.0.0
+cryptography==36.0.1
 cycler==0.11.0
 debugpy==1.5.1
-decorator==5.1.0
+decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.3
 flake8==4.0.1
-fonttools==4.28.3
+flit_core==3.6.0
+fonttools==4.28.5
 htmlmin==0.1.12
 idna==3.1
 ImageHash==4.2.1
-importlib-metadata==3.3.0
+importlib-metadata==4.2.0
 importlib-resources==5.4.0
 ipykernel==6.5.0
-ipython==7.29.0
+ipython==7.31.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.1
 Jinja2==2.11.3
 jinja2-time==0.2.0
 joblib==1.1.0
-jsonschema==4.3.2
-jupyter-client==7.0.6
+jsonschema==4.4.0
+jupyter-client==7.1.0
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
@@ -54,20 +54,20 @@ missingno==0.4.2
 mistune==0.8.4
 multimethod==1.4
 munkres==1.1.4
-nbclient==0.5.9
-nbconvert==6.3.0
+nbclient==0.5.10
+nbconvert==6.4.0
 nbformat==5.1.3
-nest-asyncio==1.5.1
+nest-asyncio==1.5.4
 networkx==2.6.3
-notebook==6.4.6
+notebook==6.4.7
 numba==0.53.1
-numpy==1.21.4
+numpy==1.22.0
 olefile==0.46
 packaging==21.3
 pandas==1.3.4
 pandas-profiling==3.0.0
 pandocfilters==1.5.0
-parso==0.8.2
+parso==0.8.3
 patsy==0.5.2
 pexpect==4.8.0
 phik==0.11.2
@@ -75,15 +75,15 @@ pickleshare==0.7.5
 Pillow==8.4.0
 pip==21.3.1
 poyo==0.5.0
-prince==2.2
+prince==0.7.1
 prometheus-client==0.12.0
-prompt-toolkit==3.0.22
+prompt-toolkit==3.0.24
 ptyprocess==0.7.0
 pycodestyle==2.8.0
 pycparser==2.21
-pydantic==1.8.2
+pydantic==1.9.0
 pyflakes==2.4.0
-Pygments==2.10.0
+Pygments==2.11.2
 pyOpenSSL==21.0.0
 pyparsing==3.0.6
 pyrsistent==0.18.0
@@ -94,12 +94,12 @@ pytz==2021.3
 PyWavelets==1.2.0
 PyYAML==6.0
 pyzmq==22.3.0
-requests==2.26.0
+requests==2.27.1
 scikit-learn==1.0.1
 scipy==1.7.3
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==59.2.0
+setuptools==60.5.0
 six==1.16.0
 src==0.1.0
 statsmodels==0.13.1
@@ -111,12 +111,12 @@ threadpoolctl==3.0.0
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
-typing_extensions==4.0.0
+typing_extensions==4.0.1
 Unidecode==1.3.2
-urllib3==1.26.7
+urllib3==1.26.8
 visions==0.7.1
 wcwidth==0.2.5
 webencodings==0.5.1
-wheel==0.37.0
+wheel==0.37.1
 widgetsnbextension==3.5.2
-zipp==3.6.0
+zipp==3.7.0
