--- a/requirements.txt
+++ b/requirements.txt
@@ -1,156 +1,122 @@
-aiohttp==3.7.4.post0
-anyio==3.4.0
 appnope==0.1.2
-argon2-cffi==21.1.0
-arrow==1.1.1
-astroid==2.8.4
-async-generator==1.10
-async-timeout==3.0.1
-attrs==21.2.0
-Babel==2.9.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.1
+attrs==21.4.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 binaryornot==0.4.4
-black==21.9b0
 bleach==4.1.0
+Bottleneck==1.3.2
 brotlipy==0.7.0
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9
-click==8.0.1
+chardet==4.0.0
+charset-normalizer==2.0.10
+click==8.0.3
 colorama==0.4.4
-conda==4.11.0
-conda-package-handling==1.7.3
+confuse==1.7.0
 cookiecutter==1.7.3
-cramjam==2.5.0
-cryptography==36.0.0
+cryptography==36.0.1
 cycler==0.11.0
 debugpy==1.5.1
-decorator==5.1.0
+decorator==5.1.1
 defusedxml==0.7.1
-discord.py==1.7.2
 entrypoints==0.3
-fastparquet==0.7.2
-fsspec==2021.11.1
-future==0.18.2
-geojson==2.5.0
-h2o==3.34.0.1
+flake8==4.0.1
+flit_core==3.6.0
+fonttools==4.28.5
 htmlmin==0.1.12
 idna==3.1
 ImageHash==4.2.1
-imbalanced-learn==0.8.1
-importlib-metadata==4.8.2
+importlib-metadata==4.2.0
 importlib-resources==5.4.0
-ipykernel==6.3.1
-ipython==7.30.1
+ipykernel==6.5.0
+ipython==7.31.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
-isort==5.10.1
 jedi==0.18.1
-Jinja2==3.0.3
+Jinja2==2.11.3
 jinja2-time==0.2.0
-joblib==1.0.1
-json5==0.9.5
-jsonschema==4.2.1
+joblib==1.1.0
+jsonschema==4.4.0
 jupyter-client==7.1.0
 jupyter-core==4.9.1
-jupyter-server==1.13.1
-jupyterlab==3.1.17
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.2
 jupyterlab-widgets==1.0.2
 kiwisolver==1.3.2
-lazy-object-proxy==1.6.0
-llvmlite==0.37.0
-MarkupSafe==2.0.1
-matplotlib==3.4.3
+llvmlite==0.36.0
+MarkupSafe==1.1.1
+matplotlib==3.5.0
 matplotlib-inline==0.1.3
 mccabe==0.6.1
-Mesa==0.8.9
 missingno==0.4.2
 mistune==0.8.4
-multidict==5.1.0
 multimethod==1.4
-mypy-extensions==0.4.3
-nb-black==1.0.7
-nbclassic==0.3.4
-nbclient==0.5.9
-nbconvert==6.3.0
+munkres==1.1.4
+nbclient==0.5.10
+nbconvert==6.4.0
 nbformat==5.1.3
 nest-asyncio==1.5.4
 networkx==2.6.3
-notebook==6.4.6
-numba==0.54.1
-numerapi==2.9.4
-numpy==1.20.3
+notebook==6.4.7
+numba==0.53.1
+numpy==1.22.0
 olefile==0.46
 packaging==21.3
-pandas==1.3.2
-pandas-profiling==3.1.0
+pandas==1.3.4
+pandas-profiling==3.0.0
 pandocfilters==1.5.0
 parso==0.8.3
-pathspec==0.9.0
 patsy==0.5.2
 pexpect==4.8.0
 phik==0.11.2
 pickleshare==0.7.5
-Pillow==8.1.2
-pip==21.0.1
-platformdirs==2.4.0
+Pillow==8.4.0
+pip==21.3.1
 poyo==0.5.0
+prince==0.7.1
 prometheus-client==0.12.0
 prompt-toolkit==3.0.24
 ptyprocess==0.7.0
-pyarrow==6.0.1
-pycosat==0.6.3
+pycodestyle==2.8.0
 pycparser==2.21
-pydantic==1.8.2
-Pygments==2.10.0
-pylint==2.11.1
+pydantic==1.9.0
+pyflakes==2.4.0
+Pygments==2.11.2
 pyOpenSSL==21.0.0
-pyowm==3.2.0
 pyparsing==3.0.6
 pyrsistent==0.18.0
 PySocks==1.7.1
 python-dateutil==2.8.2
-python-dotenv==0.17.1
 python-slugify==5.0.2
 pytz==2021.3
 PyWavelets==1.2.0
 PyYAML==6.0
 pyzmq==22.3.0
-regex==2021.9.30
-requests==2.26.0
-ruamel-yaml-conda==0.15.80
-scikit-learn==1.0
-scipy==1.6.0
+requests==2.27.1
+scikit-learn==1.0.1
+scipy==1.7.3
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==59.4.0
+setuptools==60.5.0
 six==1.16.0
-sniffio==1.2.0
+src==0.1.0
 statsmodels==0.13.1
-tabulate==0.8.9
-tangled-up-in-unicode==0.1.0
+tangled-up-in-unicode==0.2.0
 terminado==0.12.1
 testpath==0.5.0
 text-unidecode==1.3
 threadpoolctl==3.0.0
-thrift==0.15.0
-toml==0.10.2
-tomli==1.2.1
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
-typing-extensions==4.0.1
-urllib3==1.26.7
-visions==0.7.4
+typing_extensions==4.0.1
+Unidecode==1.3.2
+urllib3==1.26.8
+visions==0.7.1
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.2.3
-wheel==0.37.0
+wheel==0.37.1
 widgetsnbextension==3.5.2
-wrapt==1.12.1
-xgboost==1.5.1
-yarl==1.6.3
-zipp==3.6.0
+zipp==3.7.0
